Added gamemode command and moved some other commands to a separate file.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -134,6 +134,10 @@ commands:
         description: Sends a barrage of fireballs
         usage: /<command> [-s] [target]
         _category: player
+    gamemode:
+        description: Check or change a player's game mode
+        usage: /<command> [-c] [player] [gamemode]
+        _category: player
 
     teleport:
         aliases: tp
