Added WorldEdit as a softdepend. This may fix some issues where WorldEdit's classes cannot be found.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
 name: CommandBook
 main: com.sk89q.commandbook.CommandBookPlugin
 version: "${project.version}"
+softdepend: [WorldEdit]
 commands:
     cmdbook:
         description: CommandBook commands
