Added gamemode aliase and general commandbook styling to the gamemode command.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -136,6 +136,7 @@ commands:
         usage: /<command> [-s] [target]
         _category: player
     gamemode:
+        aliases: gm
         description: Check or change a player's game mode
         usage: /<command> [-c] [player] [gamemode]
         _category: player
