Removed the [m] from /spawn

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -163,7 +163,7 @@ commands:
         _category: teleport
     spawn:
         description: Teleport to spawn
-        usage: /<command> [-m]
+        usage: /<command>
         _category: teleport
     return:
         aliases: ret
