--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
     <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>worldedit</artifactId>
-      <version>4.7</version>
+      <version>5.1-SNAPSHOT</version>
     </dependency>
 
     <!-- Bukkit -->
@@ -67,6 +67,7 @@
         <includes>
           <include>config.yml</include>
           <include>kits.txt</include>
+          <include>modules.yml</include>
         </includes>
       </resource>
     </resources>
