--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,259 +1,4 @@
 name: CommandBook
-main: com.sk89q.commandbook.CommandBookPlugin
+main: com.sk89q.commandbook.CommandBook
 version: "${project.version}"
 softdepend: [WorldEdit]
-commands:
-    cmdbook:
-        description: CommandBook commands
-        usage: /<command> <arguments...>
-    motd:
-        description: Show the message of the day
-        usage: /<command>
-        _category: server
-    rules:
-        description: Show the rules
-        usage: /<command>
-        _category: server
-    who:
-        aliases: [list, playerlist, online, players]
-        description: Get the list of players
-        usage: /<command> [filter]
-        _category: server
-    debug:
-        description: Get server information
-        usage: /<command> ...
-        _category: server
-    ping:
-        description: Get back a dummy reply
-        usage: /<command>
-        _category: server
-    pong:
-        description: Get back a dummy reply
-        usage: /<command>
-        _parent: pong
-        _category: server
-
-    item:
-        aliases: [item, i]
-        description: Create an item
-        usage: /<command> [-d] [target] <item[:data]> [amount]
-        _category: items
-    give:
-        description: Give an item
-        usage: /<command> [-d] <target> <item[:data]> [amount]
-        _parent: item
-        _category: items
-    kit:
-        description: Get a kit (or list kits)
-        usage: /<command> <kit> [target]
-        _category: items
-    more:
-        description: Expand stack size
-        usage: /<command> [-a] [-i] [target]
-        _category: items
-
-    midi:
-        aliases: play
-        description: Play a MIDI file
-        usage: /<command> [midi]
-    intro:
-        description: Replay the intro music
-        usage: /<command>
-        _parent: midi
-
-    time:
-        description: Set the time of your current world
-        usage: /<command> [world] <time|"current">
-    playertime:
-        description: Set the time of specific players
-        usage: /<command> [-rsw] [filter] <time|"current">
-        _parent: time
-
-    weather:
-        description: Change the weather
-        usage: /<command> <'stormy'|'sunny'> [duration] [world]
-        _category: world
-    thunder:
-        description: Set the thunder state
-        usage: /<command> <'on'|'off'> [duration] [world]
-        _parent: weather
-    setspawn:
-        description: Set the spawn location
-        usage: /<command> [location]
-        _category: world
-    spawnmob:
-        description: Spawn a mob
-        usage: /<command> [-d] [-i] [-r] <mob> [count] [location]
-
-    whereami:
-        aliases: [getpos, pos, where]
-        description: Get your current location
-        usage: /<command> [target]
-        _category: player
-    whois:
-        description: Tell information about a user
-        usage: /<command> [target]
-        _category: player
-    biome:
-        description: Get a players current biome
-        usage: /<command> [target]
-        _category: player
-    compass:
-        description: Get your compass direction
-        usage: /<command> [target]
-        _category: player
-    clear:
-        description: Clear your inventory
-        usage: /<command> [-a] [target]
-        _category: player
-    thor:
-        description: Give Thor's hammer
-        usage: /<command> [target]
-        _category: player
-    unthor:
-        description: Revoke Thor's hammer
-        usage: /<command> [target]
-        _parent: thor
-        _category: player
-    rocket:
-        description: Rocket a player
-        usage: /<command> [-s] [-h] [target]
-        _category: player
-    slap:
-        description: Slap a player
-        usage: /<command> [-s] [-h|-v] [-d] [target]
-        _category: player
-    shock:
-        description: Shock a player
-        usage: /<command> [-s] [-k] [-a] [target]
-        _category: player
-    barrage:
-        description: Send a barrage of arrows
-        usage: /<command> [-s] [target]
-        _category: player
-    firebarrage:
-        description: Sends a barrage of fireballs
-        usage: /<command> [-s] [target]
-        _category: player
-    gamemode:
-        description: Check or change a player's game mode
-        usage: /<command> [-c] [player] [gamemode]
-        _category: player
-
-    teleport:
-        aliases: tp
-        description: Teleport to a location
-        usage: /<command> [target] <destination>
-        _category: teleport
-    call:
-        description: Request a teleport from someone
-        usage: /<command> <target>
-        _category: player
-        _category: teleport
-    bring:
-        aliases: [tphere, summon, s]
-        description: Bring a player to you
-        usage: /<command> <target>
-        _category: teleport
-    put:
-        aliases: place
-        description: Place a player at the location you are looking at
-        usage: /<command> <target>
-        _category: teleport
-    spawn:
-        description: Teleport to spawn
-        usage: /<command>
-        _category: teleport
-    return:
-        aliases: ret
-        description: Return back to your last location
-        usage: /<command>
-        _category: teleport
-
-    warp:
-        description: Teleport to a warp
-        usage: /<command> [world] [target] <warp>
-        _component: warps
-    setwarp:
-        aliases: createwarp
-        description: Set a warp
-        usage: /<command> <warp> [location]
-        _component: warps
-    warps:
-        description: Warp management commands
-        usage: /<command>
-        _component: warps
-
-    home:
-        description: Teleport to home
-        usage: /<command> [[[world]] [target]] [owner]
-        _component: homes
-    sethome:
-        aliases: createhome
-        description: Set home
-        usage: /<command> [location] [owner]
-        _component: homes
-    homes:
-        description: Home management commands
-        usage: /<command>
-        _component: homes
-
-    broadcast:
-        description: Broadcast a message
-        usage: /<command> <msg...>
-        _category: messaging
-    say:
-        description: Say a message
-        usage: /<command> <msg...>
-        _category: messaging
-    me:
-        description: Say an action message
-        usage: /<command> <msg...>
-        _category: messaging
-    msg:
-        aliases: [message, whisper, pm, tell]
-        description: Send a private message to a user
-        usage: /<command> <target> <message...>
-        _category: messaging
-    reply:
-        aliases: r
-        description: Reply to the last user
-        usage: /<command> <message...>
-        _parent: msg
-        _category: messaging
-    afk:
-        aliases: away
-        description: Set yourself as away
-        usage: /<command> [status]
-        _category: messaging
-    mute:
-        description: Mute a player
-        usage: /<command> <target>
-        _category: messaging
-    unmute:
-        description: Unmute a player
-        usage: /<command> <target>
-        _parent: mute
-        _category: messaging
-
-    kick:
-        description: Kick a player by name
-        usage: /<command> <target> [reason...]
-        _component: bans
-    ban:
-        description: Ban a player by name
-        usage: /<command> <target> [reason...]
-        _component: bans
-    unban:
-        aliases: pardon
-        description: Unban a player by name
-        usage: /<command> <target> [reason...]
-        _component: bans
-    isbanned:
-        description: Checks if a player's name is banned
-        usage: /<command> <target>
-        _component: bans
-    bans:
-        description: Ban save/load commands
-        usage: /<command> ...
-        _component: bans
