--- a/src/main/resources/modules.yml
+++ b/src/main/resources/modules.yml
@@ -1,12 +1,12 @@
 bans: com.sk89q.commandbook.bans.BansComponent
-homes:
-warps:
+homes: com.sk89q.commandbook.locations.HomesComponent
+warps: com.sk89q.commandbook.locations.WarpsComponent
 messaging: com.sk89q.commandbook.MessagingComponent
 teleport: com.sk89q.commandbook.locations.TeleportComponent
-server: com.sk89q.commandbook.ServerComponent
-items: com.sk89q.commandbook.items.ItemsComponent
+#server: com.sk89q.commandbook.ServerComponent
+#items: com.sk89q.commandbook.items.ItemsComponent
 kits: com.sk89q.commandbook.kits.KitsComponent
 midi: com.sk89q.jinglenote.JingleNoteComponent
 time: com.sk89q.commandbook.time.TimeComponent
-fun: com.sk89q.commandbook.FunComponent
+#fun: com.sk89q.commandbook.FunComponent
 debug: com.sk89q.commandbook.DebugComponent
