--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <includes>
           <include>config.yml</include>
           <include>kits.txt</include>
+          <include>modules.yml</include>
         </includes>
       </resource>
     </resources>
