--- a/src/main/resources/modules.yml
+++ b/src/main/resources/modules.yml
@@ -8,5 +8,9 @@ items: com.sk89q.commandbook.ItemsComponent
 kits: com.sk89q.commandbook.kits.KitsComponent
 midi: com.sk89q.jinglenote.JingleNoteComponent
 time: com.sk89q.commandbook.time.TimeComponent
+name-verification: com.sk89q.commandbook.NameVerificationComponent
 #fun: com.sk89q.commandbook.FunComponent
 debug: com.sk89q.commandbook.DebugComponent
+thor: com.sk89q.commandbook.ThorComponent
+online-list: com.sk89q.commandbook.OnlineListComponent
+stored-messages: com.sk89q.commandbook.StoredMessagesComponent
