--- a/src/main/resources/modules.yml
+++ b/src/main/resources/modules.yml
@@ -3,14 +3,17 @@ homes: com.sk89q.commandbook.locations.HomesComponent
 warps: com.sk89q.commandbook.locations.WarpsComponent
 messaging: com.sk89q.commandbook.MessagingComponent
 teleport: com.sk89q.commandbook.locations.TeleportComponent
-#server: com.sk89q.commandbook.ServerComponent
-items: com.sk89q.commandbook.ItemsComponent
+items: com.sk89q.commandbook.InventoryComponent
 kits: com.sk89q.commandbook.kits.KitsComponent
 midi: com.sk89q.jinglenote.JingleNoteComponent
 time: com.sk89q.commandbook.time.TimeComponent
 name-verification: com.sk89q.commandbook.NameVerificationComponent
-#fun: com.sk89q.commandbook.FunComponent
+fun: com.sk89q.commandbook.FunComponent
 debug: com.sk89q.commandbook.DebugComponent
 thor: com.sk89q.commandbook.ThorComponent
 online-list: com.sk89q.commandbook.OnlineListComponent
 stored-messages: com.sk89q.commandbook.StoredMessagesComponent
+spawn-locations: com.sk89q.commandbook.locations.SpawnLocationsComponent
+info: com.sk89q.commandbook.InfoComponent
+world: com.sk89q.commandbook.WorldComponent
+player: com.sk89q.commandbook.PlayerComponent
