--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
       <artifactId>opencsv</artifactId>
       <version>2.0</version>
     </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
