--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,7 @@
         <includes>
           <include>config.yml</include>
           <include>kits.txt</include>
-          <include>modules.yml</include>
+          <include>components.yml</include>
         </includes>
       </resource>
     </resources>
