Added a component that provides ingame help

--- a/src/main/resources/components.yml
+++ b/src/main/resources/components.yml
@@ -58,3 +58,6 @@ world:
 player:
     class: com.sk89q.commandbook.PlayerComponent
     default: true
+help:
+    class: com.sk89q.commandbook.HelpComponent
+    default: false
