Added comments to the configuration Added low-priority-command-registration setting - see configuration for more details

--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
         <filtering>true</filtering>
         <directory>${basedir}/src/main/resources/</directory>
         <includes>
-          <include>config.yml</include>
+          <include>config-comments.yml</include>
           <include>kits.txt</include>
           <include>components.yml</include>
         </includes>
