Fixed config-components.yml. I should stop switching to other things while I'm editing YAML files.

--- a/src/main/resources/config-comments.yml
+++ b/src/main/resources/config-comments.yml
@@ -22,4 +22,4 @@ low-priority-command-registration: |
     with /<command>
     
 op-permissions: Give ops all permissions
-crappy-wrapper-compat: 
+crappy-wrapper-compat: Disables some features to be compatible with badly-written server wrappers.
