Added more comments to the config, added zmljenkins repo to the pom for libcomponents SNAPSHOT builds

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,10 @@
       <id>bukkit-repo</id>
       <url>http://repo.bukkit.org/content/groups/public/</url>
     </repository>
+    <repository>
+        <id>zml-jnks</id>
+        <url>http://ci.zachsthings.com/plugin/repository/everything/</url>
+    </repository>
   </repositories>
 
   <dependencies>
