--- a/pom.xml
+++ b/pom.xml
@@ -19,16 +19,16 @@
 
   <repositories>
     <repository>
+      <id>zml-repo</id>
+      <url>http://files.zachsthings.com/repo</url>
+    </repository>
+    <repository>
       <id>sk89q-mvn2</id>
       <url>http://mvn2.sk89q.com/repo</url>
     </repository>
     <repository>
       <id>bukkit-repo</id>
       <url>http://repo.bukkit.org/content/groups/public/</url>
-    </repository>
-    <repository>
-        <id>zml-jnks</id>
-        <url>http://ci.zachsthings.com/plugin/repository/everything/</url>
     </repository>
   </repositories>
 
