--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     <dependency>
         <groupId>com.zachsthings.libcomponents</groupId>
         <artifactId>libcomponents-bukkit</artifactId>
-        <version>1.0</version>
+        <version>1.1-SNAPSHOT</version>
     </dependency>
 
     <!-- Bukkit -->
