Add a component to handle command warmups and cooldowns Command handling is a bit ugly because of some issues with c.s.minecraft.util.commands code, will fix

--- a/src/main/resources/components.yml
+++ b/src/main/resources/components.yml
@@ -64,3 +64,6 @@ help:
 god:
     class: com.sk89q.commandbook.GodComponent
     default: true
+cooldowns:
+    class: com.sk89q.commandbook.CooldownsComponent
+    default: false
