--- a/src/main/resources/components.yml
+++ b/src/main/resources/components.yml
@@ -64,6 +64,6 @@ help:
 god:
     class: com.sk89q.commandbook.GodComponent
     default: true
-cooldowns:
-    class: com.sk89q.commandbook.CooldownsComponent
-    default: false
+#cooldowns:
+#    class: com.sk89q.commandbook.CooldownsComponent
+#    default: false
