--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>worldedit</artifactId>
-      <version>5.1</version>
+      <version>5.3</version>
       <exclusions>
         <exclusion>
           <groupId>org.spout</groupId>
@@ -49,14 +49,14 @@
     <dependency>
         <groupId>com.zachsthings.libcomponents</groupId>
         <artifactId>libcomponents-bukkit</artifactId>
-        <version>1.1-SNAPSHOT</version>
+        <version>1.1</version>
     </dependency>
 
     <!-- Bukkit -->
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.2.4-R0.1-SNAPSHOT</version>
+      <version>1.2.5-R1.1</version>
     </dependency>
 
     <!-- Other dependencies -->
