--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
+        <configuration>
+          <source>1.6</source>
+          <target>1.6</target>
+          <compilerVersion>1.6</compilerVersion>
+        </configuration>
       </plugin>
 
       <!-- JAR creation plugin -->
