--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.2.5-R1.1</version>
+      <version>1.2.5-R4.1-SNAPSHOT</version>
     </dependency>
 
     <!-- Other dependencies -->
