--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
         <groupId>com.zachsthings.libcomponents</groupId>
         <artifactId>libcomponents-bukkit</artifactId>
-        <version>1.1</version>
+        <version>1.2-SNAPSHOT</version>
     </dependency>
 
     <!-- Bukkit -->
