--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,12 @@
   </properties>
   <repositories>
     <repository>
-      <id>zml-repo</id>
-      <url>http://files.zachsthings.com/repo</url>
-    </repository>
-    <repository>
       <id>sk89q-repo</id>
       <url>http://maven.sk89q.com/repo/</url>
+    </repository>
+    <repository>
+      <id>zml-repo</id>
+      <url>http://files.zachsthings.com/repo</url>
     </repository>
     <repository>
       <id>bukkit-repo</id>
@@ -55,14 +55,12 @@
       </exclusions>
     </dependency>
 
-    <!-- Bukkit -->
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
       <version>1.3.1-R2.0</version>
     </dependency>
 
-    <!-- Other dependencies -->
     <dependency>
       <groupId>net.sf.opencsv</groupId>
       <artifactId>opencsv</artifactId>
@@ -82,6 +80,7 @@
     </site>
   </distributionManagement>
   <build>
+    <defaultGoal>install</defaultGoal>
     <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
     
     <extensions>
@@ -92,7 +91,6 @@
       </extension>
     </extensions>
 
-    <!-- Resources -->
     <resources>
       <resource>
         <targetPath>.</targetPath>
@@ -114,9 +112,7 @@
       </resource>
     </resources>
 
-    <!-- Plugins -->
     <plugins>
-      <!-- Compile plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -128,7 +124,6 @@
         </configuration>
       </plugin>
 
-      <!-- JAR creation plugin -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -147,8 +142,6 @@
         </configuration>
       </plugin>
 
-      <!-- Shade -->
-      <!-- We want to bundle in some dependencies -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -171,7 +164,6 @@
         </executions>
       </plugin>
 
-      <!-- Assembly -->
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <version>2.2-beta-2</version><!--$NO-MVN-MAN-VER$-->
@@ -180,7 +172,6 @@
         </configuration>
       </plugin>
 
-      <!-- Release -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
@@ -192,7 +183,6 @@
         </configuration>
       </plugin>
       
-      <!-- Site generation -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
