Added <execution> for Maven assembly plugin to have it automatically run the assembly steps.

--- a/pom.xml
+++ b/pom.xml
@@ -170,6 +170,15 @@
         <configuration>
           <descriptor>${basedir}/src/main/assembly/default.xml</descriptor>
         </configuration>
+        <executions>
+          <execution>
+            <id>release</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
