Add a component to control flight and walking speed, as well as allowing a toggle of flight permissions in non-creative mode

--- a/src/main/resources/components.yml
+++ b/src/main/resources/components.yml
@@ -64,6 +64,9 @@ help:
 god:
     class: com.sk89q.commandbook.GodComponent
     default: true
+flight:
+    class: com.sk89q.commandbook.FlightComponent
+    default: true
 #cooldowns:
 #    class: com.sk89q.commandbook.CooldownsComponent
 #    default: false
