--- a/pom.xml
+++ b/pom.xml
@@ -49,11 +49,13 @@
         </exclusion>
       </exclusions>
     </dependency>
-
+    
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <version>1.4.5-R1.0</version>
+      <version>1.6.2-R0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+      <type>jar</type>
     </dependency>
 
     <dependency>
