--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <dependency>
       <groupId>com.zachsthings.libcomponents</groupId>
       <artifactId>libcomponents-bukkit</artifactId>
-      <version>1.2</version>
+      <version>1.2.1-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>org.spout</groupId>
