--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sk89q</groupId>
   <artifactId>commandbook</artifactId>
-  <version>2.3.1-SNAPSHOT</version>
+  <version>2.4</version>
   <name>CommandBook</name>
   <description>CommandBook brings general commands to Bukkit</description>
   <licenses>
@@ -16,7 +16,7 @@
   <scm>
     <connection>scm:git:git://github.com/sk89q/commandbook.git</connection>
     <url>https://github.com/sk89q/commandbook</url>
-    <tag>master</tag>
+    <tag>2.4</tag>
     <developerConnection>scm:git:git@github.com:sk89q/commandbook.git</developerConnection>
   </scm>
   <properties>
