Corrected the url for sk89q-repo

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <repositories>
     <repository>
       <id>sk89q-repo</id>
-      <url>http://maven.sk89q.com/artifactory/libs-snapshot-local</url>
+      <url>http://maven.sk89q.com/repo</url>
     </repository>
     <repository>
       <id>bukkit-repo</id>
