Start working on 1.13 support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
 name: CommandBook
 main: com.sk89q.commandbook.CommandBook
 version: "${project.version}"
-softdepend: [WorldEdit]
+depend: [WorldEdit]
+api-version: 1.13
