Rogue draft of 1.13 support

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,4 @@ name: CommandBook
 main: com.sk89q.commandbook.CommandBook
 version: "${project.version}"
 softdepend: [WorldEdit]
+api-version: 1.13
