Move the project to gradle

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: CommandBook
 main: com.sk89q.commandbook.CommandBook
-version: "${project.version}"
+version: "${internalVersion}"
 softdepend: [WorldEdit]
 api-version: 1.13
