Break the spawnmob command out of the fun component
This should allow this command to be disabled independently of the other fun commands, which are rather different.

--- a/src/main/resources/defaults/components.yml
+++ b/src/main/resources/defaults/components.yml
@@ -34,6 +34,9 @@ time:
 name-verification:
     class: com.sk89q.commandbook.component.nameverification.NameVerificationComponent
     default: true
+entity-spawn:
+    class: com.sk89q.commandbook.component.entityspawn.EntitySpawnComponent
+    default: true
 fun:
     class: com.sk89q.commandbook.component.fun.FunComponent
     default: true
